--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -2,14 +2,15 @@ version: "3.8"
 services:
   postgres:
     image: postgres:latest
-    container_name: postgres_db
+    container_name: postgres
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: mydatabase
     ports:
-      - "5432:5432"
+      - "5433:5433"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    command: postgres -p 5433
 volumes:
   postgres_data:
